# rust-docker-auto-pull

./: .env  Cargo.toml
src/: main.rs
