[package]
name = "docker-auto-pull"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "docker-auto-pull"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.28.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = {version="0.3.17", features = ["env-filter"]}
axum = "0.6.18"
serde ={ version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
dotenvy = "0.15.7"
reqwest = "0.11.18"
